lint, fixed errors

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/dedication.xhtml">Dedication</a>
 				</li>
 				<li>
-					<a href="text/preface.xhtml">Note</a>
+					<a href="text/foreword.xhtml">Note</a>
 				</li>
 				<li>
 					<a href="text/prologue.xhtml">Prologue</a>
