--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -5,9 +5,11 @@
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="bodymatter z3998:fiction">
+	<body epub:type="frontmatter z3998:fiction">
 		<section id="dedication" epub:type="dedication">
-			<p><b>TO THE BETTY ZANE CHAPTER OF THE DAUGHTERS OF THE REVOLUTION THIS BOOK IS RESPECTFULLY DEDICATED BY THE AUTHOR</b></p>
+			<p>
+				<b>TO THE BETTY ZANE CHAPTER OF THE DAUGHTERS OF THE REVOLUTION THIS BOOK IS RESPECTFULLY DEDICATED BY THE AUTHOR</b>
+			</p>
 		</section>
 	</body>
 </html>
