--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,14 +12,14 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Betty Zane</i><br/>
-			was published in YEAR by<br/>
+			was published in 1903 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Zane_Grey">Zane Grey</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="http://rosscarter.com">Ross Carter</a>,<br/>
 			and is based on a transcription produced in 1998 by<br/>
-			<b epub:type="z3998:personal-name">TRANSCRIBER_1</b>, <b epub:type="z3998:personal-name">TRANSCRIBER_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Bill Brewer</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1261">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
