--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="frontmatter z3998:fiction">
 		<section id="dedication" epub:type="dedication">
 			<p>
-				<b>TO THE BETTY ZANE CHAPTER OF THE DAUGHTERS OF THE REVOLUTION THIS BOOK IS RESPECTFULLY DEDICATED BY THE AUTHOR</b>
+				<b>To the Betty Zane chapter of the Daughters of the Revolution this book is respectfully dedicated by the author</b>
 			</p>
 		</section>
 	</body>
