--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,11 +23,11 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1261">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/bettyzane00greyrich">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="COVER_ARTIST_WIKI_URL">COVER_ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Meach-o-shín-gaw, Little White Bear, a Distinguished Brave</i>,<br/>
+			a painting completed in 1832 by<br/>
+			<a href="https://en.wikipedia.org/wiki/George_Catlin">George Catlin</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
