--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,7 +25,7 @@
 			and on digital scans available at the<br/>
 			<a href="https://archive.org/details/bettyzane00greyrich">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">Meach-o-shín-gaw, Little White Bear, a Distinguished Brave</i>,<br/>
+			<i epub:type="se:name.visual-art.painting"><span xml:lang="ksk">Meach-o-shín-gaw</span>, Little White Bear, a Distinguished Brave</i>,<br/>
 			a painting completed in 1832 by<br/>
 			<a href="https://en.wikipedia.org/wiki/George_Catlin">George Catlin</a>.<br/>
 			The cover and title pages feature the<br/>
