--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -23,6 +23,10 @@
 					<a href="text/prologue.xhtml">Prologue</a>
 				</li>
 				<li>
+					<a href="text/halftitlepage.xhtml">Betty Zane</a>
+				</li>
+				<ol>
+				<li>
 					<a href="text/chapter-1.xhtml" epub:type="z3998:roman">I</a>
 				</li>
 				<li>
@@ -70,6 +74,7 @@
 				<li>
 					<a href="text/epilogue.xhtml">Afterword</a>
 				</li>
+				</ol>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
