--- a/src/epub/text/foreword.xhtml
+++ b/src/epub/text/foreword.xhtml
@@ -5,7 +5,7 @@
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="frontmatter z3998:fiction">
+	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="foreword" epub:type="foreword">
 			<h2 epub:type="title">Note</h2>
 			<p>In a quiet corner of the stately little city of Wheeling, West Va., stands a monument on which is inscribed:</p>
