--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -24,57 +24,57 @@
 				</li>
 				<li>
 					<a href="text/halftitlepage.xhtml">Betty Zane</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1.xhtml" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-4.xhtml" epub:type="z3998:roman">IV</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml" epub:type="z3998:roman">V</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml" epub:type="z3998:roman">VI</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml" epub:type="z3998:roman">VII</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml" epub:type="z3998:roman">VIII</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml" epub:type="z3998:roman">IX</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml" epub:type="z3998:roman">X</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml" epub:type="z3998:roman">XI</a>
+						</li>
+						<li>
+							<a href="text/chapter-12.xhtml" epub:type="z3998:roman">XII</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml" epub:type="z3998:roman">XIII</a>
+						</li>
+						<li>
+							<a href="text/chapter-14.xhtml" epub:type="z3998:roman">XIV</a>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml" epub:type="z3998:roman">XV</a>
+						</li>
+						<li>
+							<a href="text/epilogue.xhtml">Afterword</a>
+						</li>
+					</ol>
 				</li>
-				<ol>
-					<li>
-						<a href="text/chapter-1.xhtml" epub:type="z3998:roman">I</a>
-					</li>
-					<li>
-						<a href="text/chapter-2.xhtml" epub:type="z3998:roman">II</a>
-					</li>
-					<li>
-						<a href="text/chapter-3.xhtml" epub:type="z3998:roman">III</a>
-					</li>
-					<li>
-						<a href="text/chapter-4.xhtml" epub:type="z3998:roman">IV</a>
-					</li>
-					<li>
-						<a href="text/chapter-5.xhtml" epub:type="z3998:roman">V</a>
-					</li>
-					<li>
-						<a href="text/chapter-6.xhtml" epub:type="z3998:roman">VI</a>
-					</li>
-					<li>
-						<a href="text/chapter-7.xhtml" epub:type="z3998:roman">VII</a>
-					</li>
-					<li>
-						<a href="text/chapter-8.xhtml" epub:type="z3998:roman">VIII</a>
-					</li>
-					<li>
-						<a href="text/chapter-9.xhtml" epub:type="z3998:roman">IX</a>
-					</li>
-					<li>
-						<a href="text/chapter-10.xhtml" epub:type="z3998:roman">X</a>
-					</li>
-					<li>
-						<a href="text/chapter-11.xhtml" epub:type="z3998:roman">XI</a>
-					</li>
-					<li>
-						<a href="text/chapter-12.xhtml" epub:type="z3998:roman">XII</a>
-					</li>
-					<li>
-						<a href="text/chapter-13.xhtml" epub:type="z3998:roman">XIII</a>
-					</li>
-					<li>
-						<a href="text/chapter-14.xhtml" epub:type="z3998:roman">XIV</a>
-					</li>
-					<li>
-						<a href="text/chapter-15.xhtml" epub:type="z3998:roman">XV</a>
-					</li>
-					<li>
-						<a href="text/epilogue.xhtml">Afterword</a>
-					</li>
-				</ol>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
@@ -93,7 +93,19 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/dedication.xhtml" epub:type="bodymatter z3998:fiction">Betty Zane</a>
+					<a href="text/dedication.xhtml" epub:type="frontmatter dedication">Dedication</a>
+				</li>
+				<li>
+					<a href="text/foreword.xhtml" epub:type="frontmatter foreword">Note</a>
+				</li>
+				<li>
+					<a href="text/prologue.xhtml" epub:type="frontmatter prologue">Prologue</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+				</li>
+				<li>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Betty Zane</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
