Re-ran se semanticate

--- a/src/epub/text/foreword.xhtml
+++ b/src/epub/text/foreword.xhtml
@@ -9,7 +9,7 @@
 		<section id="foreword" epub:type="foreword">
 			<h2 epub:type="title">Note</h2>
 			<p>In a quiet corner of the stately little city of Wheeling, West Va., stands a monument on which is inscribed:</p>
-			<p>“By authority of the State of West Virginia, to commemorate the siege of Fort Henry, Sept. 11, 1782, the last battle of the American Revolution, this tablet is here placed.”</p>
+			<p>“By authority of the State of West Virginia, to commemorate the siege of Fort Henry, <abbr>Sept.</abbr> 11, 1782, the last battle of the American Revolution, this tablet is here placed.”</p>
 			<p>Had it not been for the heroism of a girl the foregoing inscription would never have been written, and the city of Wheeling would never have existed.</p>
 			<p>From time to time I have read short stories and magazine articles which have been published about Elizabeth Zane and her famous exploit; but they are unreliable in some particulars, which is owing, no doubt, to the singularly meager details available in histories of our western border.</p>
 			<p>For a hundred years the stories of Betty and Isaac Zane have been familiar, oft-repeated tales in my family⁠—tales told with that pardonable ancestral pride which seems inherent in everyone. My grandmother loved to cluster the children round her and tell them that when she was a little girl she had knelt at the feet of Betty Zane, and listened to the old lady as she told of her brother’s capture by the Indian Princess, of the burning of the Fort, and of her own race for life. I knew these stories by heart when a child.</p>
