--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,9 +7,7 @@
 	</head>
 	<body epub:type="frontmatter z3998:fiction">
 		<section id="dedication" epub:type="dedication">
-			<p>
-				<b>To the Betty Zane chapter of the Daughters of the Revolution this book is respectfully dedicated by the author</b>
-			</p>
+			<p>To the Betty Zane chapter of the Daughters of the Revolution this book is respectfully dedicated by the author</p>
 		</section>
 	</body>
 </html>
