Remove role attributes

--- a/src/epub/text/epilogue.xhtml
+++ b/src/epub/text/epilogue.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="epilogue" role="doc-epilogue" epub:type="epilogue">
+		<section id="epilogue" epub:type="epilogue">
 			<h2 epub:type="title">Afterword</h2>
 			<p>Betty lived all her after life on the scene of her famous exploit. She became a happy wife and mother. When she grew to be an old lady, with her grandchildren about her knee, she delighted to tell them that when a girl she had run the gauntlet of the Indians.</p>
 			<p><abbr>Col.</abbr> Zane became the friend of all redmen. He maintained a trading post for many years, and his dealings were ever kind and honorable. After the country got settled he received from time to time various marks of distinction from the State, Colonial, and National governments. His most noted achievement was completed about 1796. President Washington, desiring to open a National road from Fort Henry to Maysville, Kentucky, paid a great tribute to <abbr>Col.</abbr> Zane’s ability by employing him to undertake the arduous task. His brother Jonathan and the Indian guide, Tomepomehala, rendered valuable aid in blazing out the path through the wilderness. This road, famous for many years as Zane’s Trace, opened the beautiful Ohio valley to the ambitious pioneer. For this service Congress granted <abbr>Col.</abbr> Zane the privilege of locating military warrants upon three sections of land, each a square mile in extent, which property the government eventually presented to him. <abbr>Col.</abbr> Zane was the founder of Wheeling, Zanesville, Martin’s Ferry, and Bridgeport. He died in 1811.</p>
