--- a/src/epub/text/prologue.xhtml
+++ b/src/epub/text/prologue.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="frontmatter z3998:fiction">
-		<section id="prologue" role="doc-prologue" epub:type="prologue">
+		<section id="prologue" epub:type="prologue">
 			<h2 epub:type="title">Prologue</h2>
 			<p>On June 16, 1716, Alexander Spotswood, Governor of the Colony of Virginia, and a gallant soldier who had served under Marlborough in the English wars, rode, at the head of a dauntless band of cavaliers, down the quiet street of quaint old Williamsburg.</p>
 			<p>The adventurous spirits of this party of men urged them toward the land of the setting sun, that unknown west far beyond the blue crested mountains rising so grandly before them.</p>
