--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -87,7 +87,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter">Betty Zane</a>
+					<a href="text/prologue.xhtml" epub:type="bodymatter">Betty Zane</a>
 				</li>
 			</ol>
 		</nav>
